[gd_scene load_steps=9 format=3 uid="uid://shg32tu5wmde"]

[ext_resource type="Script" path="res://world.gd" id="1_br2dy"]
[ext_resource type="PackedScene" uid="uid://d3mta0ks6ie25" path="res://env.tscn" id="1_ttutw"]
[ext_resource type="Texture2D" uid="uid://d5742h7oj6qe" path="res://addons/kenney_particle_pack/circle_05.png" id="3_rv170"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kssbs"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_0y4pg"]
sky_material = SubResource("ProceduralSkyMaterial_kssbs")

[sub_resource type="Environment" id="Environment_f0v2h"]
background_mode = 2
sky = SubResource("Sky_0y4pg")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wdkg5"]
bg_color = Color(0.929412, 0.235294, 0.227451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dghe"]
bg_color = Color(0.341176, 0.737255, 0.0745098, 1)

[node name="World" type="Node"]
script = ExtResource("1_br2dy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_f0v2h")

[node name="env" parent="." instance=ExtResource("1_ttutw")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="mainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 290.0
offset_top = 159.0
offset_right = -290.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/mainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/mainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Address" type="LineEdit" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to join here..."
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_rv170")
stretch_mode = 3

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = 38.0
offset_right = -170.0
offset_bottom = -580.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_wdkg5")
theme_override_styles/fill = SubResource("StyleBoxFlat_6dghe")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/mainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/mainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
